--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.3.3
 Flask-WTF==1.1.1
 Flask-SQLAlchemy==3.0.4
 WTForms==3.0.1
+email-validator==1.3.1
 rapidfuzz==2.13.7
 psycopg2-binary==2.9.9
 gunicorn==20.1.0
